--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@georgedoescode/spline": "^1.0.1",
     "@types/babel-generator": "^6.25.8",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "simplex-noise": "^4.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
