--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/babel-generator": "^6.25.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-h5-audio-player": "^3.9.3",
+    "react-icons": "^5.3.0",
     "simplex-noise": "^4.0.3"
   },
   "devDependencies": {
