--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18.3.1",
     "react-h5-audio-player": "^3.9.3",
     "react-icons": "^5.3.0",
-    "simplex-noise": "^4.0.3"
+    "simplex-noise": "^4.0.3",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
