--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^22.8.4",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
+    "@types/swiper": "^6.0.0",
     "@vitejs/plugin-react": "^4.3.2",
     "eslint": "^9.12.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
