--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@georgedoescode/spline": "^1.0.1",
     "@types/babel-generator": "^6.25.8",
     "react": "^18.3.1",
+    "react-blurhash": "^0.3.0",
     "react-dom": "^18.3.1",
     "react-h5-audio-player": "^3.9.3",
     "react-icons": "^5.3.0",
