--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "simplex-noise": "^4.0.3",
-    "swiper": "^11.1.14"
+    "swiper": "^11.1.14",
+    "vanta": "^0.5.24"
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
