--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/goldman": "^5.1.0",
     "@fontsource/monoton": "^5.1.0",
     "@georgedoescode/spline": "^1.0.1",
+    "hls.js": "^1.5.17",
     "react": "^18.3.1",
     "react-blurhash": "^0.3.0",
     "react-dom": "^18.3.1",
