--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/goldman": "^5.1.0",
     "@fontsource/monoton": "^5.1.0",
     "@georgedoescode/spline": "^1.0.1",
+    "embla-carousel-react": "^8.6.0",
     "hls.js": "^1.5.17",
     "react": "^18.3.1",
     "react-blurhash": "^0.3.0",
@@ -29,13 +30,13 @@
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@types/swiper": "^6.0.0",
-    "@vitejs/plugin-react": "^4.3.2",
+    "@vitejs/plugin-react": "^5.1.0",
     "eslint": "^9.12.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.8.1",
-    "vite": "^5.4.8"
+    "vite": "^7.0.0"
   }
 }
