--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "globals": "^15.9.0",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.8.1",
-    "vite": "^7.0.0"
+    "vite": "^7.0.0",
+    "vite-plugin-static-copy": "^3.1.4"
   }
 }
