--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-blurhash": "^0.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-router-dom": "^7.12.0",
     "simplex-noise": "^4.0.3",
     "swiper": "^11.2.2"
   },
