--- a/.github/workflows/upload-episodes-to-r2.yml
+++ b/.github/workflows/upload-episodes-to-r2.yml
@@ -27,8 +27,8 @@ jobs:
           npm install -g wrangler@latest
           
           # Upload to R2 using wrangler with explicit auth
-          wrangler r2 object put episodes.json \
-            --bucket=collectiveradio \
+          # New wrangler syntax: {bucket}/{key} as positional argument
+          wrangler r2 object put collectiveradio/episodes.json \
             --file=src/assets/episodes.json
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
